# GraphicsIntro

./: CMakeLists.txt  README.md  compile_commands.json
include/: argwrapper.h  camera.h  engine.h  eventhandler.h  graphics.h  graphics_headers.h  menu.h  object.h  object3d.h  shader.h  window.h
shaders/: defaultFragmentShader.glsl  defaultVertexShader.glsl
src/: argwrapper.cpp  camera.cpp  engine.cpp  eventhandler.cpp  graphics.cpp  main.cpp  menu.cpp  object.cpp  object3d.cpp  shader.cpp  window.cpp
